# Cloud-Programming-Team01

./: .gitignore  ARCHITECTURE_DIAGRAM_PROMPT.md  nailong.tft  电子智能储物柜UI(X2_800x480).tft
aws-backend/: .gitignore  README.md  samconfig.toml  template.yaml  workflow.md
aws-backend/docs/: deployment-outputs.md  final-design.md  frontend-api-contract.md  hardware-embedded-integration-guide.md  interface-contract.md  lex-inventory-chatbot.md  rekognition-integration-guide.md
aws-backend/dynamodb/: schema.json  user-face-schema.json
aws-backend/scripts/: create-lex-inventory-bot.sh
docs/: SPEC.md
docs/ml/: CONTRACTS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_RECORD.md  README.md  SPEC.md  TEST_PLAN.md  TEST_RESULTS.md
frontend/: .env.example  INTEGRATION_GUIDE.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js  styles.css
frontend/test/: README.md  app.js  config.example.js  index.html  styles.css
ml/: README.md  pyproject.toml
ml/scripts/: ml_check_aws.py  ml_create_bucket.py  ml_pi_smoke_test.py  ml_register_face.py
ml/src/ml/: __init__.py  api.py  aws_service.py  aws_utils.py  bedrock_interpreter.py  config.py  duration_math.py  errors.py  food_catalog.py  media.py  models.py
ml/src/ml/config_data/: food_catalog.json
ml/tests/unit/: test_config_errors_date.py  test_media_validation.py
raspberry-pi/: cli_flow.py  cloud_api.py  config.py  flow_test.py  hardware_api.py  main.py  register_face.py  requirements.txt  shadow_listen.py
raspberry-pi/aws_iot/: __init__.py  mqtt_client.py  shadow_manager.py
(+34 files in other folders)
